--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -85,6 +85,7 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
+  flex: 0 0 25%;
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -156,12 +157,10 @@
 }
 
 .CustombtnBuy{
-  color: darkgreen;
   border: 1px darkgreen solid;
 }
 
 .CustombtnInfo{
-  color: black;
   border: 1px silver solid;
 }
 
