--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -67,7 +67,7 @@
     border-radius: 50%
 }
 
-.timeline-header {
+.timeline_header {
     border-radius: 0;
     clear: both;
     margin-bottom: 50px;
@@ -75,37 +75,37 @@
     position: relative
 }
 
-.timeline-header .timeline-header-title {
+.timeline_header .timeline_header_title {
     display: inline-block;
     text-align: center;
     padding: 7px 15px;
     min-width: 100px
 }
 
-.timeline .timeline-header:first-child {
+.timeline .timeline_header:first-child {
     margin-bottom: 30px;
     margin-top: 15px
 }
 
-.timeline-stat {
+.timeline_stat {
     width: 100px;
     float: left;
     text-align: center;
     padding-bottom: 15px
 }
 
-.timeline-entry {
+.timeline_entry {
     margin-bottom: 50px;
     margin-top: 5px;
     position: relative;
     clear: both
 }
 
-.timeline-entry-inner {
+.timeline_entry_inner {
     position: relative
 }
 
-.timeline-time {
+.timeline_time {
     display: inline-block;
     padding: 5px 3px 7px;
     margin-top: 3px;
@@ -115,7 +115,7 @@
     max-width: 70px
 }
 
-.timeline-icon {
+.timeline_icon {
     border-radius: 50%;
     box-shadow: 0 0 0 7px #ebeef0;
     display: block;
@@ -126,21 +126,21 @@
     width: 46px
 }
 
-.timeline-icon img {
+.timeline_icon img {
     width: 46px;
     height: 46px;
     border-radius: 50%;
     vertical-align: top
 }
 
-.timeline-icon:empty {
+.timeline_icon:empty {
     height: 10px;
     width: 10px;
     margin-top: 20px;
     background-color: #a4b4c7
 }
 
-.timeline-label {
+.timeline_label {
     background-color: #fff;
     border-radius: 0;
     margin-left: 90px;
@@ -152,8 +152,8 @@
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.3);
 }
 
-.timeline-label:before,
-.timeline-label:after {
+.timeline_label:before,
+.timeline_label:after {
     content: "";
     display: block;
     position: absolute;
@@ -163,14 +163,14 @@
     top: 0
 }
 
-.timeline-label:before {
+.timeline_label:before {
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
     border-right: 10px solid #e6e6e6;
     margin: 15px 0 0 -10px
 }
 
-.timeline-label:after {
+.timeline_label:after {
     border-top: 9px solid transparent;
     border-bottom: 9px solid transparent;
     border-right: 9px solid #fff;
@@ -178,25 +178,25 @@
 }
 
 .panel .timeline,
-.panel .timeline-time {
+.panel .timeline_time {
     background-color: #fff
 }
 
-.panel .timeline-icon {
+.panel .timeline_icon {
     box-shadow: 0 0 0 7px #fff
 }
 
-.panel .timeline-label {
+.panel .timeline_label {
     box-shadow: none;
     background-color: #f7f7f7;
     border: 1px solid #e3e3e3
 }
 
-.panel .timeline-label:before {
+.panel .timeline_label:before {
     border-right-color: #e3e3e3
 }
 
-.panel .timeline-label:after {
+.panel .timeline_label:after {
     border-right-color: #f7f7f7
 }
 
